# data_engineering_projects

AirBNB End-To-End/: .gitignore  main.py  pyproject.toml
AirBNB End-To-End/airbnb_aws_project/: .user.yml  dbt_project.yml
AirBNB End-To-End/airbnb_aws_project/macros/: multiplier.sql  tag.sql  trimmer.sql
AirBNB End-To-End/airbnb_aws_project/snapshots/: dim_listings.yml
AirBNB End-To-End/airbnb_aws_project/tests/: source_tests.sql
Olist Business Metrics Warehouse/: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
Olist Business Metrics Warehouse/config/: airflow.cfg
Olist Business Metrics Warehouse/dags/: olist_pipeline.py  s3_ingestion.py
Olist Business Metrics Warehouse/olist_project/: .user.yml  dbt_project.yml
Olist Business Metrics Warehouse/olist_project/models/marts/: dim_customers.sql  dim_date.sql  dim_products.sql  dim_sellers.sql  fact_orders.sql  schema.yml
Olist Business Metrics Warehouse/olist_project/models/sources/: sources.yml
Olist Business Metrics Warehouse/olist_project/models/stage/: stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_product_category_name_translation.sql  stg_products.sql  stg_sellers.sql
Olist Business Metrics Warehouse/sql/ddl/: customers.sql  geolocation.sql  order_items.sql  order_payments.sql  order_reviews.sql  orders.sql  product_category_name_translation.sql  products.sql  sellers.sql
Olist Business Metrics Warehouse/sql/setup/: copy_into.sql  create_schemas.sql  resources.sql
(+12 files in other folders)
