[project]
name = "olist-business-metrics-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.2",
    "boto3>=1.43.26",
    "dbt-core>=1.11.11",
    "dbt-snowflake>=1.11.5",
    "dotenv>=0.9.9",
    "kaggle>=2.2.1",
    "python-dotenv>=1.2.2",
]
